--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -424,3 +424,11 @@ nav .mbr-section-btn {
 	top: 0;
 	left: -2400px;
 }
+
+.cid-qAinQGWOaC {
+    padding-top: 90px!important;  
+}
+
+.cid-qyfkh1f2BY {
+    padding-top: 90px!important;  
+}
