--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -125,6 +125,12 @@ section {
   -webkit-flex-basis: 100%;
   flex-basis: 100%; }
 
+  @media (min-width: 992px){
+    .media-content {
+  flex-basis: 100%;
+  margin-top: 50px; }
+  }
+
 .media-container-row {
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -206,7 +212,8 @@ figure[mbr-media-size] {
   max-width: 100%; }
 
 .mbr-figure img, .card-img img {
-  width: 100%; }
+  width: 100%;
+  border-radius: 10px; }
 
 @media (max-width: 991px) {
   .media-size-item {
